--- a/proposal/Plan/Plan.tex
+++ b/proposal/Plan/Plan.tex
@@ -17,7 +17,7 @@ This project aims to evaluate the potential of integrating a Prolog-based optimi
 The Prolog-based optimization framework is composed of three key components. 
 
 \subsubsection{Prolog optimization rules}
-The first component of the project is the Prolog knowledge base, which includes all optimization expressions represented as Prolog predicates. This involves translating various optimization rules into Prolog specification. The initial focus will be on the canonicalization and conditional elimination phases, which are critical for standardizing the IR and removing redundant conditional expressions. As the project progresses, additional optimization phases will be explored and integrated into the component.
+The first component of the project is the Prolog knowledge base, which includes all optimization expressions represented as Prolog predicates. This involves translating various optimization rules into Prolog specifications. The initial focus will be on the canonicalization and conditional elimination phases, which are critical for standardizing the IR and removing redundant conditional expressions. As the project progresses, additional optimization phases will be explored and integrated into the component.
 \newpage
 \begin{description}
     \item \textbf{Canonicalization Phase:} The first phase to be covered is the canonicalization phase, which aims to standardize the IR code. This phase reduces the variety of IR forms by transforming them into a canonical format, thereby simplifying the optimization process for subsequent phases. By establishing a uniform representation, canonicalization facilitates more effective and efficient optimization in later stages.
@@ -49,12 +49,12 @@ After validating the optimizer's correctness, performance must be evaluated and 
 \begin{description}
     \item \textbf{Performance Metrics:} Measure various performance metrics, including execution speed, resource utilization (e.g., memory and CPU), and optimization throughput. Compare these metrics with those of existing GraalVM optimization techniques to measure improvements or regressions. This comparison will help identify whether the Prolog-based optimizer provides tangible performance benefits or if it introduces any new challenges.
     \item \textbf{Potential New Optimizations:} Explore and document potential new optimization techniques that Prolog's declarative syntax might enable. This involves identifying unique optimization opportunities that may not be feasible with traditional imperative methods. By leveraging Prolog’s rule-based approach, we can uncover novel optimization strategies that could enhance the efficiency and effectiveness of the optimization process.
-    \item \textbf{Strengths and Weaknesses:} Evaluate the Prolog-based optimizer and compare it to traditional approaches in terms of usability, including documentation clarity and the ease of adding new rules; maintenance, focusing on the ease of updates and code clarity; debugging and testing, assessing how effectively errors are identified and resolved; and scalability, ensuring the optimizer remains effective as codebases and optimization demands grow. This assessment will reveal the optimizer’s strengths and limitations relative to conventional methods.
+    \item \textbf{Strengths and Weaknesses:} Evaluate the Prolog-based optimizer by comparing it to traditional approaches in terms of usability, including the clarity of documentation and ease of adding new rules; maintenance, focusing on the simplicity of updates and code clarity; debugging and testing, assessing the effectiveness of error detection and resolution; and expressibility, examining how well Prolog's declarative syntax facilitates the specification of complex optimization rules.
 \end{description}
 
 
 \section{Timeline}
-The project timeline is divided into two parts: the first half (Semester 2, 2024) and the second half (Semester 1, 2025). The timeline is further divided into 4 phases: Project Proposal, Proof of Concept, Extension and Evaluation, and Report and Demonstration. The total duration of the project is 30 weeks, with a commitment of 10 working hours per week. The first half involves conducting research, writing the project proposal, and developing a proof of concept. The second half focuses on refining and expanding the project to encompass a comprehensive set of optimization rules, as well as preparing the final paper, report, and presentation. The timeline may be adjusted based on the results of the proof of concept phase to accommodate unforeseen challenges or to incorporate additional development needs.  The distribution of weeks per task is illustrated in the timeline graph below.
+The project timeline is divided into two parts: the first half (Semester 2, 2024) and the second half (Semester 1, 2025). The timeline is further divided into 4 phases: Project Proposal, Proof of Concept, Extension and Evaluation, and Report and Demonstration. The first half involves conducting research, writing the project proposal, and developing a proof of concept. The second half focuses on refining and expanding the project to encompass a comprehensive set of optimization rules, as well as preparing the final paper, report, and presentation. The timeline may be adjusted based on the results of the proof of concept phase to accommodate unforeseen challenges or to incorporate additional development needs.  The distribution of weeks per task is illustrated in the timeline graph below.
 
 \begin{figure}[h]
     \includegraphics[width=1\textwidth]{Packages/PartA.png}
