update conference paper

--- a/IEEE Conference Template/background.tex
+++ b/IEEE Conference Template/background.tex
@@ -1,6 +1,7 @@
-In GraalVM, the Graal IR models a program's structure and operations using a directed graph that illustrates both data and control flow between nodes \cite{Graal2021}. Data flow is represented by input edges pointing upward to the operand nodes, control flow is depicted by successor edges pointing downwards to the successor nodes. This IR framework provides a robust and efficient structure for code analysis and optimization transformation. A critical aspect of this project involves converting the Graal IR into Prolog facts to enable the optimizer to query these facts for potential optimizations. \\
+In GraalVM, the Graal IR models a program's structure and operations using a directed graph that specifies both data and control flow between nodes \cite{Graal2021}. Data flow is represented by input edges pointing upward to the operand nodes, control flow is depicted by successor edges pointing downwards to the successor nodes. This IR framework provides a robust and efficient structure for code analysis and optimization transformation. A critical aspect of this project involves converting the Graal IR into Prolog facts to enable the optimizer to query these facts for potential optimizations. \\
 
-In traditional imperative languages, a program consists of a sequence of instructions. This approach emphasizes a step-by-step procedure to solve a given problem. In contrast, logic programming languages, such as Prolog, focus on defining a knowledge base composed of facts and rules \cite{Bramer2013}. Facts represent objects and their relationships, while rules imply the relationships. Logic programming languages with declarative specifications allow programs to be analyzed efficiently through queries. By focusing on what needs to be achieved rather than how to achieve it, declarative approaches offer greater clarity and intuitiveness. Previous research has extensively utilized Datalog, a prominent logic programming language, for different levels of program analysis.
-Tools like Soufflé \cite{silverman2021wantanalyzeschemeprograms} apply Datalog to perform advanced control-flow analysis, while DIMPLE~\cite{Benton2007} uses Prolog to analyze Java bytecode, supporting flexible experimentation and high-performance results.
+DataLog has established itself as a powerful tool in compiler implementation through its applications in complex program analysis and transformation. 
+Tools like Soufflé \cite{silverman2021wantanalyzeschemeprograms} apply Datalog to perform advanced control-flow analysis, while DIMPLE~\cite{Benton2007} uses Yap Prolog to analyze Java bytecode, supporting flexible experimentation and high-performance results.
 % Similarly, Lam et al.'s \cite{Lam2005} PQL framework integrates Datalog with intuitive pattern-based query writing, simplifying tasks like detecting SQL injection vulnerabilities.
 However, there is a notable lack of prior work regarding the application of logic programming languages for the optimization and transformation of code. 
+Spinellis’ work in 1999 explored an alternative method for expressing optimizations through declarative specifications. Specifically, he transformed specifications into string regular expressions, which are then applied to the target code, allowing for adaptive and efficient refinements \cite{Spinellis1999}. However, Spinellis’s work was limited to a rudimentary prototype of an optimizer with a ``single optimization specification" and ``limited flow-of-control optimizations" \cite{Spinellis1999}.
