--- a/IEEE Conference Template/methodology.tex
+++ b/IEEE Conference Template/methodology.tex
@@ -1,1 +1,3 @@
-This project approach to integrating Prolog into GraalVM consists of three phases: writing Prolog rules, generating Prolog facts, and querying Prolog for optimization. In the first phase, optimization rules are translated into Prolog predicates, initially focusing on canonicalization and conditional elimination. The second phase involves generating Prolog facts representing the IR nodes and their relationships. The final phase queries the Prolog rules for optimization and transforms the IR accordingly. These phases will be developed in parallel to ensure compatibility between Prolog facts and rules. Existing test suites in GraalVM will be leveraged to ensure the correctness of the integration. For evaluation, optimization throughput will be benchmarked and compared with GraalVM’s existing techniques to assess performance improvements.
+This project's approach to integrating Prolog into GraalVM consists of three phases: writing Prolog rules, generating Prolog facts, and querying and parsing Prolog results for optimization. In the first phase, optimization rules are translated into Prolog predicates. The second phase involves generating Prolog facts representing the IR nodes and their relationships. The final phase queries the Prolog rules for optimization and transforms the IR accordingly. A custom Prolog result parser will be implemented using recursive descent parsing to parse and convert Prolog output back into IR nodes. These phases will be developed in parallel to ensure compatibility between Prolog facts and rules. Existing test suites in GraalVM will be leveraged to ensure the correctness of the integration.\\
+
+This project defines an operation throughput metric to evaluate the impact of integrating Prolog into GraalVM. An operation is defined as the process of building the IR graph for a method and applying all optimization phases, including canonicalization and conditional elimination. The operation is repeatedly performed for five seconds. The total number of completed operations is divided by five to calculate the average number of operations per second (operation throughput). This benchmark is conducted twice: once using the standard GraalVM (without Prolog), and once after incorporating Prolog into GraalVM. Comparing both results indicates whether Prolog improves or degrades the performance of the optimization process.
