--- a/IEEE Conference Template/abstract.tex
+++ b/IEEE Conference Template/abstract.tex
@@ -1,1 +1,3 @@
-This paper investigates the integration of a Prolog-based optimization framework into the GraalVM compiler to explore the use of logic programming in compiler optimizations. GraalVM’s intermediate representation (IR) is converted into Prolog facts, with optimization logic expressed through Prolog predicate rules. Experiments on canonicalization and conditional elimination show that Prolog enables clear and declarative rule definitions. Benchmark results show that stateless optimizations like canonicalization perform reasonably well, whereas stateful tasks like conditional elimination face notable overhead due to Projog’s limitations, suggesting the need for further performance enhancements.
+This paper investigates the integration of a Prolog-based optimization framework into the GraalVM compiler to explore the use of logic programming in compiler optimizations. 
+GraalVM’s intermediate representation (IR) is converted into Prolog facts, with optimization logic expressed through Prolog predicate rules. 
+Experiments on different optimizations show that Prolog enables clear and declarative rule definitions. Benchmark results show that stateless optimizations like canonicalization perform reasonably well, whereas stateful tasks like conditional elimination face notable overhead due to Projog’s limitations, particularly its slow startup time, suggesting the need for further performance enhancements.
