--- a/IEEE Conference Template/background.tex
+++ b/IEEE Conference Template/background.tex
@@ -1,6 +1,7 @@
-In GraalVM, the Graal IR models a program's structure and operations using a directed graph that specifies both data and control flow between nodes \cite{Graal2021}. Data flow is represented by input edges pointing upward to the operand nodes, control flow is depicted by successor edges pointing downwards to the successor nodes. This IR framework provides a robust and efficient structure for code analysis and optimization transformation. A critical aspect of this project involves converting the Graal IR into Prolog facts to enable the optimizer to query these facts for potential optimizations. \\
+In GraalVM, the Graal IR models a program's structure and operations using a directed graph that specifies both data and control flow between nodes \cite{Graal2021}. Data flow is represented by input edges pointing upward to the operand nodes, control flow is depicted by successor edges pointing downwards to the successor nodes. This IR framework provides a robust and efficient structure for code analysis and optimization transformation. 
+A critical aspect of this project involves converting the Graal IR into Prolog facts to enable the optimizer to query these facts for potential optimizations. \\
 
-DataLog has established itself as a powerful tool in compiler implementation through its applications in complex program analysis and transformation. 
+Datalog has established itself as a powerful tool in compiler implementation through its applications in complex program analysis and transformation. 
 Tools like Soufflé \cite{silverman2021wantanalyzeschemeprograms} apply Datalog to perform advanced control-flow analysis, while DIMPLE~\cite{Benton2007} uses Yap Prolog to analyze Java bytecode, supporting flexible experimentation and high-performance results.
 % Similarly, Lam et al.'s \cite{Lam2005} PQL framework integrates Datalog with intuitive pattern-based query writing, simplifying tasks like detecting SQL injection vulnerabilities.
 However, there is a notable lack of prior work regarding the application of logic programming languages for the optimization and transformation of code. 
