--- a/IEEE Conference Template/conference.tex
+++ b/IEEE Conference Template/conference.tex
@@ -110,6 +110,14 @@
     \end{spacing}
 }
 
+\section{Approach}
+{
+    \begin{spacing}{1.1}
+        \fontsize{10pt}{10pt}\selectfont\setlength{\parindent}{5mm}\justifying
+        \input{approach.tex}
+    \end{spacing}
+}
+
 \section{Results}
 {
     \begin{spacing}{1.1}
