--- a/IEEE Conference Template/introduction.tex
+++ b/IEEE Conference Template/introduction.tex
@@ -1,1 +1,7 @@
-Compiler optimizations are essential for improving program performance. Much of the focus has been on improving the compilation process through traditional imperative approaches. Logic programming languages, such as Prolog, offer unique advantages due to their declarative nature, making them well-suited for tasks like program analysis. However, their application in the optimization phase of compilers remains largely unexplored. This project investigates the feasibility of integrating a Prolog-based optimization framework into the GraalVM compiler. It aims to determine whether Prolog’s declarative approach can improve the expressiveness and effectiveness of compiler optimizations compared to existing GraalVM techniques. The primary objectives are to assess the technical feasibility of implementing this framework, develop Prolog-based rules for various optimization techniques, and evaluate their performance and integration within GraalVM's existing infrastructure. 
+Compiler optimizations are essential for improving program performance. 
+Much of the focus has been on improving the compilation process through traditional imperative approaches. 
+Logic programming languages, such as Prolog, offer unique advantages due to their declarative nature, making them well-suited for tasks like program analysis. 
+However, their application in the optimization phase of compilers remains largely unexplored. 
+This project investigates the feasibility of integrating a Prolog-based optimization framework into the GraalVM compiler. 
+It aims to determine whether Prolog’s declarative approach can improve the expressiveness and effectiveness of compiler optimizations compared to existing GraalVM techniques.
+The primary objectives are to assess the technical feasibility of implementing this framework, develop Prolog-based rules for various optimization techniques, and evaluate their performance and integration within GraalVM's existing infrastructure. 
