--- a/proposal/Background/Background.tex
+++ b/proposal/Background/Background.tex
@@ -31,7 +31,10 @@ AOT compilation is advantageous for this project as it performs all compilation 
 
 \section{Prolog Programming Language}
 
-In traditional imperative languages, a program consists of a sequence of instructions. This approach emphasizes a step-by-step procedure where each instruction modifies the state of the machine to solve a given problem. In contrast, logic programming languages, such as Prolog, operate on a fundamentally different paradigm. Instead of prescribing a sequence of operations, logic programming focuses on defining a knowledge base composed of facts and rules \cite{Bramer2013}. After that, users can query the knowledge base to search for objects and relations. 
+In traditional imperative languages, a program consists of a sequence of instructions.
+This approach emphasizes a step-by-step procedure where each instruction modifies the state of the machine to solve a given problem. 
+In contrast, logic programming languages, such as Prolog, operate on a fundamentally different paradigm. 
+Instead of prescribing a sequence of operations, logic programming focuses on defining a knowledge base composed of facts and rules \cite{Bramer2013}. After that, users can query the knowledge base to search for objects and relations. 
 
 In Prolog, facts represent objects and their relationships, while rules imply the relationship between objects given it satisfies all the conditions. Once the knowledge base is established, users can formulate queries to extract information or solve problems by leveraging the logical relationships defined in the base using the depth-first search algorithm \cite{Chowdhary2020}. There may be several ways to achieve a given goal. The system initially selects the first available option. If Prolog fails to resolve a specific subgoal, it will backtrack to explore these previously noted alternatives. This mechanism, referred to as backtracking \cite{Chowdhary2020}, enables Prolog to systematically search for different solutions by revisiting and trying alternative paths.
 
