--- a/proposal/Abstract/Abstract.tex
+++ b/proposal/Abstract/Abstract.tex
@@ -1,4 +1,6 @@
 \chapter[Abstract]{Abstract}
 
 \noindent
-Compiler optimizations are critical for enhancing program execution speed and overall performance. This thesis proposes integrating Prolog-based optimization techniques into the GraalVM compiler framework to enhance performance and optimization expressibility. The process begins by specifying optimization strategies in Prolog’s declarative syntax. The next step is to parse the IR and translate it into Prolog facts that accurately capture its structure. The final step involves recursively querying these Prolog rules to apply optimizations. As optimizations are identified and applied, the IR is iteratively refined and reconstructed from the optimized Prolog facts. By querying these rules within the GraalVM compiler, the proposal aims to explore how Prolog’s logic programming capabilities can improve the expressiveness and effectiveness of compiler optimizations. The study seeks to assess the feasibility of this integration, examining how Prolog’s declarative nature might contribute to more sophisticated and potentially more efficient optimization strategies compared to traditional imperative methods. This approach could lead to advancements in compiler technology and open new avenues for research in the optimization phase of compilation.
+Compiler optimizations are critical for enhancing program execution speed and overall performance.
+This thesis proposes integrating Prolog-based optimization techniques into the GraalVM compiler framework to enhance performance and optimization expressibility. 
+The process begins by specifying optimization strategies in Prolog’s declarative syntax. The next step is to parse the IR and translate it into Prolog facts that accurately capture its structure. The final step involves recursively querying these Prolog rules to apply optimizations. As optimizations are identified and applied, the IR is iteratively refined and reconstructed from the optimized Prolog facts. By querying these rules within the GraalVM compiler, the proposal aims to explore how Prolog’s logic programming capabilities can improve the expressiveness and effectiveness of compiler optimizations. The study seeks to assess the feasibility of this integration, examining how Prolog’s declarative nature might contribute to more sophisticated and potentially more efficient optimization strategies compared to traditional imperative methods. This approach could lead to advancements in compiler technology and open new avenues for research in the optimization phase of compilation.
